<resources>
    <!-- activityMain -->
    <string name="app_name">MatteApp</string>
    <string name="spillButton">Start spill</string>
    <string name="infoButton">Om spillet</string>
    <string name="preferanserButton">Preferanser</string>

    <!-- activityInfo -->
    <string name="infoTittel">Om spillet</string>
    <string name="omSpilletTittel">Litt info om MatteApp</string>
    <string name="spillInfoTittel">Spill</string>
    <string name="preferanserInfoTittel">Preferanser</string>

    <string name="informasjonTekstGenerelt">MatteApp er en applikasjon laget for barn for å lære addisjon.</string>

    <string name="informasjonTekstSpill">I spill delen av appen vil brukeren få presentert et regnestykke med to heltall.
    Brukeren kan skrive inn svaret sitt ved hjelp av knapper med tall fra 0 til 9 og slette tall fra svaret ved hjelp av slett knappen. Dersom brukeren svarer feil vil
        et vindu komme opp med tilbakemelding, dersom den svarer riktig vil en grønn tekst med tilbakemelding komme opp og neste spørsmål vil komme automatisk om 3 sekunder.
        Underveis i spillet vil også brukeren kunne se hvilke regnestykke man er på sammen med det totale antallet av regnestykker.</string>

    <string name="informasjonTekstPreferanser">I preferansedelen av appen kan brukeren velge mellom språkene Norsk og Tysk. Her kan også brukeren sette antall regnestykker
        som den må svare på i spilldelen av appen, brukeren kan velge mellom 5, 10 og 15 regnestykker.</string>

    <!-- activitySpill -->
    <string name="spillTittel">Spill</string>
    <string name="svar">Svar</string>
    <string name="knapp1" translatable="false">1</string>
    <string name="knapp2" translatable="false">2</string>
    <string name="knapp3" translatable="false">3</string>
    <string name="knapp4" translatable="false">4</string>
    <string name="knapp5" translatable="false">5</string>
    <string name="knapp6" translatable="false">6</string>
    <string name="knapp7" translatable="false">7</string>
    <string name="knapp8" translatable="false">8</string>
    <string name="knapp9" translatable="false">9</string>
    <string name="knapp10" translatable="false">0</string>
    <string name="slettButton">Slett</string>
    <string name="svarButton">Svar</string>
    <string name="avsluttDialogTittel">Er du sikker på at du vil avslutte spillet?</string>
    <string name="avsluttOk">Ja</string>
    <string name="avsluttIkkeOk">Nei</string>
    <string name="spillFerdigDialogTittel">Det er ingen flere tilgjengelige spørsmål</string>
    <string name="hjem">Hjem</string>
    <string name="lukk">Lukk</string>
    <string name="nåverendeRegnestykke" translatable="false"></string>
    <string name="totaleRegnestykker" translatable="false"></string>
    <string name="regnestykkeTeller">Regnestykke</string>


    <string name="riktigTilbakemelding">Riktig, bra jobba!</string>
    <string name="feilTilbakemelding">Feil, prøv igjen med å telle på fingrene!</string>
    <string name="tilbakemelding" translatable="false"></string>

    <!-- activityPreferanser -->
    <string name="språk">Velg språk</string>
    <string name="norskButton">Norsk</string>
    <string name="tyskButton">Tysk</string>
    <string name="preferanseTittel">Preferanser</string>
    <string name="antallSpørsmålTittel">Velg antall spørsmål</string>
    <string name="femSpørsmålButton">5 spørsmål</string>
    <string name="tiSpørsmålButton">10 spørsmål</string>
    <string name="femtenSpørsmålButton">15 spørsmål</string>


    <!-- Arrays -->
    <string-array name="regnestykker">
        <item>1+3</item>
        <item>2+5</item>
        <item>8+3</item>
        <item>2+3</item>
        <item>1+9</item>
        <item>7+4</item>
        <item>6+2</item>
        <item>4+4</item>
        <item>5+1</item>
        <item>1+1</item>
        <item>3+3</item>
        <item>2+2</item>
        <item>6+7</item>
        <item>1+3</item>
        <item>8+3</item>
    </string-array>

    <string-array name="fasit">
        <item>4</item>
        <item>7</item>
        <item>11</item>
        <item>5</item>
        <item>10</item>
        <item>11</item>
        <item>8</item>
        <item>8</item>
        <item>6</item>
        <item>2</item>
        <item>6</item>
        <item>4</item>
        <item>13</item>
        <item>4</item>
        <item>11</item>
    </string-array>
</resources>