<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="MissingConstraints">


    <!--App tittel/logo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- App tittel -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <!-- Logo -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/appikon_liten" />

    </LinearLayout>

    <!--Start spill knapp -->
    <Button
        android:id="@+id/spillButton"
        style="@style/activityMainButtonVerticalStyle"
        android:drawableRight="@drawable/spillikon"
        android:text="@string/spillButton" />

    <!--Om spillet knapp -->
    <Button
        android:id="@+id/infoButton"
        style="@style/activityMainButtonVerticalStyle"
        android:drawableRight="@drawable/infoikon"
        android:text="@string/infoButton" />

    <!--Preferanser knapp -->
    <Button
        android:id="@+id/preferanserButton"
        style="@style/activityMainButtonVerticalStyle"
        android:drawableRight="@drawable/preferanserikon"
        android:text="@string/preferanserButton" />


</LinearLayout>